# NaxiStudio

./: LICENSE  README  main.js  package-lock.json  package.json  preload.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  app.json  tauri.conf.json
src/assets/prog/: icon.icns
src/config/: dir.json
src/pages/config/: index.html
src/pages/player/: index.html
src/pages/player/scripts/files/: files.js
src/scripts/: click.js  loadMedia.js  loadPlayer.js  main.js
src/scripts/acervo/: loadFiles.js  loadFolders.js
src/scripts/collection/: loadFiles.js  loadFolders.js
src/scripts/components/: Player.js
src/scripts/playlist/: funcsPlayer.js  loadMedia.js  loadPlayer.js  loadPlaylist.js
src/windows/config/: index.html  styles.css
src/windows/config/scripts/: click.js  main.js  mainConfig.js
src/windows/config/scripts/base/: configDatabase.js
src/windows/config/scripts/database/: database.js
src/windows/config/scripts/pages/: pageAudio.js  pages.js
src/windows/config/styles/: style.css
src/windows/player/: index.html
src/windows/player/scripts/: Click.js  click.js  mainPlayer.js  tclick.js
src/windows/player/scripts/components/: Player.js  clock.js  player.js  thours.js
src/windows/player/scripts/math/: math.js
src/windows/player/scripts/playlist/: Playlist.js  media.js  playlist.js
src/windows/player/scripts/playlist/standards/: commercial.js  musical.js
src/windows/player/styles/: layoutClass.css  style.css
