[package]
name = "naxistudio"
version = "0.0.1"
description = "NaxiStudio Player"
documentation = "https://naxistudio.pages.dev/docs"
authors = ["Bruno Cardoso <contato@brunocardosofm.com.br>"]
license = "MIT"
repository = "https://github.com/brunocardosofs/NaxiStudio"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "global-shortcut-all", "fs-write-file", "dialog-message", "dialog-confirm", "dialog-ask", "fs-create-dir", "fs-exists", "dialog-open", "window-all", "protocol-asset", "fs-read-dir", "fs-read-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
